--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             
         </div>
-            <button onclick="fun()">hey</button>
+            <button onclick="funh()">hey</button>
             <img src="2.gif" height="50" class="fade-in over-img">
             <img src="2.gif" height="50" class="fade-in over-img2">
             <img src="2.gif" height="50" class="fade-in over-img3">
